# 3D-Sandbox

./: CMakeLists.txt  README.md  main.cpp
.windsurf/rules/: sandbox.md
include/: App.h  Camera.h  Config.h  CustomButtonsPanel.h  EditorState.h  Grid.h  InputHandler.h  Log.h  MapPanel.h  MenuRenderer.h  Mesh.h  Model.h  ModelBrowserPanel.h  ModelManager.h  Renderer.h  SandBoxUI.h  Scene.h  SceneData.h  ScenePanel.h  SceneSerializer.h  SceneState.h  Shader.h  Texture.h  UiModelBrowser.h  UiOverlay.h  Window.h
resources/maps/: default.json  n_map.json  new_map.json  okmap.json
resources/models/tests/: IV4N-V2-with-symetry.mtl
scripts/: build_and_run.sh
shaders/: grid.vs  model_loading.fs
src/: App.cpp  Camera.cpp  CustomButtonsPanel.cpp  Grid.cpp  InputHandler.cpp  Log.cpp  MapPanel.cpp  MenuRenderer.cpp  Mesh.cpp  Model.cpp  ModelBrowserPanel.cpp  ModelManager.cpp  Renderer.cpp  SandBoxUI.cpp  Scene.cpp  ScenePanel.cpp  SceneSerializer.cpp  SceneState.cpp  Shader.cpp  Texture.cpp  UiOverlay.cpp  Window.cpp  main.cpp
